[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio-throttle>=1.0.2",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "statsmodels>=0.14.5",
    "streamlit>=1.48.0",
    "trafilatura>=2.0.0",
    "webull>=0.6.1",
    "yfinance>=0.2.65",
]
